<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingTop="24dp"
        android:paddingEnd="8dp"
        android:paddingBottom="24dp"
        tools:context=".screens.createtodo.CreateTodoActivity">

        <EditText
            android:id="@+id/editTextEnterTodoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_todo_text_hint"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupPriorities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonLowPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:padding="16dp"
                android:text="@string/low"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButtonMediumPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:padding="16dp"
                android:text="@string/medium"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButtonHighPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:padding="16dp"
                android:text="@string/high"
                android:textSize="18sp" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonCreateTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/blue"
            android:text="@string/create"
            android:textAllCaps="true"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>